--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "author": "Jair Batista",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
     "mongodb": "^2.2.19"
   },
   "devDependencies": {
